Frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  selector:
    app: todo
  ports:
  - port: 80                 #service port
    targetPort: 80        #container port
