Frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  labels:
    app: todo
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: todo.asishkashyap.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-svc
            port: 
              number: 80
